--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
     <div class="btn-container">
         <h1>اختر المستند </h1>
-        <a href="الفاتورة الاولية/deliver.html" class="btn btn-primary btn-lg m-2">فاتورة اولية </a>
+        <a href="الفاتورة الاولية/deliver.html" class="btn btn-danger btn-lg m-2">الفاتورة الأولية  </a>
+        <a href="الفاتورة الضريبية المبسطه/deliver.html" class="btn btn-primary btn-lg m-2">الفاتورة  الضريبية المبسطة  </a>
         <a href="سند قبض/deliver.html" class="btn btn-success btn-lg m-2">سند قبض</a>
         <a href="سند صرف/deliver.html" class="btn btn-danger btn-lg m-2">سند صرف</a>
     </div>
