--- a/سند صرف/deliver.html
+++ b/سند صرف/deliver.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سند صرف</title>
-</head>
-<style>
-    canvas {
-  border: 1px solid grey;
+    <link rel="stylesheet" type="text/css" href="../style/style.css" />
 
-}
-</style>
+</head>
+
 <body>
     <div class="container" style="text-align: center;">
         <canvas id="myCanvas"></canvas>
